--- a/templates/swift/Example/Podfile
+++ b/templates/swift/Example/Podfile
@@ -1,10 +1,10 @@
 use_frameworks!
 
-platform :ios, '10.0'
+platform :ios, '11.0'
 
 target '${POD_NAME}_Example' do
   pod '${POD_NAME}', :path => '../'
-
+  pod 'TYHTestUtils',:git=>'https://github.com/pencilCool/TYHTestUtils.git'
   target '${POD_NAME}_Tests' do
     inherit! :search_paths
 
